gitops/flood/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flood
  labels:
    app: flood
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flood
  template:
    metadata:
      labels:
        app: flood
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: flood
        image: jesec/flood:4.16.2
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: flood-config
          mountPath: /config
        - name: downloads
          mountPath: /data
      volumes:
      - name: flood-config
        persistentVolumeClaim:
          claimName: flood-config
      - name: downloads
        hostPath:
          path: /data/torrents
          type: Directory
