gitops/flood/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flood
spec:
  ports:
  - name: app
    port: 80
    targetPort: 3000
    protocol: TCP
    appProtocol: http
  selector:
    app: flood
