gitops/flood/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flood
  namespace: flood
spec:
  parentRefs:
  - name: main
    namespace: cilium-gateway
    sectionName: https-flood
  hostnames:
  - flood.sync.lt
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: flood
      port: 80
