gitops/flood/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flood
  namespace: flood
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - flood.sync.lt
    secretName: flood-letsencrypt
  rules:
  - host: flood.sync.lt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flood
            port:
              name: app
  - host: flood.sync.lt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flood
            port:
              name: app
